styles.css
/* ... */
.screenplay .dialogue-words {
	display: block;
	text-align: left;
	width: 34ch;
	max-width: 34ch;
	margin-top: 0;
	margin-bottom: 0;
	margin-right: 0;
	margin-left: 1.5in;
	padding: 0px;
	break-before: avoid-page;
}

/* On the phone we don't need number of lines on the screen to
   match those of the printed product. We just need something
   readable where a human still visually recognises what is what.
   So let's center it (margin 0 auto) and don't do the padding */
.is-phone .screenplay .dialogue-character {
	padding: 0.1in 0 0 0;
	margin: 0 auto;
}

.is-phone .screenplay .dialogue-words {
	margin: 0.5in;
	width: calc(100% - 1in);
	max-width: calc(100% - 1in);
}

/* prevents  a page break from interrupting dialogue */
.screenplay .dialogue {
	break-inside: avoid;
}

/* adjust for mobile */
.is-phone .screenplay .dialogue-words {
	margin: 0 0 0 0.45in;
}

/* parentheticals */
.screenplay .dialogue-parenthetical {
	margin: 0 0 0 1.91in;
	padding: 0px;
	text-align: left;
	font-style: italic;
}

/* adjust for phones */
.is-phone .screenplay .dialogue-parenthetical {
	margin: 0 0 0 0.8in;
}

/****** scene headings */

.screenplay .scene-heading,
.screenplay-toc .scene-heading {
	padding: 0px !important;
	text-transform: uppercase;
	font-weight: var(--bold-weight);
	font-size: inherit;
	text-align: left;
	color: var(--h1-color);
}

.screenplay .transition {
	display: block;
	padding: 0px;
	text-transform: uppercase;
	color: var(--h3-color);
	font-weight: var(--bold-weight);
	font-size: inherit;
	text-align: right;
}

.screenplay h1,
.screenplay h2,
.screenplay h3,
.screenplay h4,
.screenplay h5,
.screenplay-toc h1,
.screenplay-toc h2,
.screenplay-toc h3,
.screenplay-toc h4,
.screenplay-toc h5 {
	font-size: inherit;
	text-align: left;
	text-transform: uppercase;
	font-weight: var(--bold-weight);
	margin: 0;
}

/********* sections */

.screenplay .section,
.screenplay-toc .section {
	text-transform: uppercase;
	font-weight: var(--bold-weight);
	text-align: left;
}

/********* synopsis and notes */

.screenplay .synopsis {
	color: var(--text-muted);
	font-style: italic;
	margin-left: var(--synopsis-margin);
	margin-right: var(--synopsis-margin);
	background-color: var(--background-primary-alt);
}

.screenplay .boneyard {
	color: var(--text-faint);
	font-style: italic;
}

/********* centered text */

.screenplay .centered {
	text-align: center;
	display: block;
}

/******** text decoration */

.screenplay .bold {
	font-weight: bold;
}

.screenplay .italics {
	font-style: italic;
}

.screenplay .underline {
	text-decoration: underline;
}

.screenplay .note-symbol-minus {
	text-decoration: line-through;
	color: var(--color-red);
}

.screenplay .note-symbol-plus {
	color: var(--color-green);
}

.screenplay .note-todo,
.screenplay-toc .note-todo {
	color: var(--text-muted);
	font-style: italic;
	background-image: linear-gradient(
		transparent 70%,
		rgba(243, 245, 39, 0.4) 70%
	);
}

.screenplay-toc .note-todo {
	font-size: 10pt;
	margin-left: 20px;
}

.screenplay .note {
	color: var(--text-muted);
	font-style: italic;
	background-color: var(--background-primary-alt);
}

.screenplay .blackout {
	background-color: rgba(0, 0, 0, 0.85);
	color: transparent;
	border-radius: 2px;
	padding: 0 2px;
	user-select: none;
}

/**************** page break */
/* For now we generate hr in the reading view, so this
   is specific to the editor */

.screenplay .cm-line .page-break {
	background: linear-gradient(
		0deg,
		transparent 45%,
		var(--text-faint) 45%,
		var(--text-faint) 55%,
		transparent 55%
	);
}

/****************************** index view */

.screenplay-index-cards {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
	gap: 10px;
	--font-text: var(--screenplay-font);
}

.screenplay-index-card {
	border: 1px solid #ccc;
	padding: 10px;
	height: 160px;
	background-color: var(--background-primary-alt);
	border-radius: 8px;
	overflow: hidden;
	position: relative;
	display: flex;
	flex-direction: column;
}

.show-on-hover {
	opacity: 0;
	transition: opacity 0.2s ease-in-out;
}

.show-on-hover:hover {
	opacity: 1;
}

.index-card-buttons {
	position: absolute;
	top: 10px;
	right: 10px;
	padding: 0;
}

.screenplay-index-cards .drop-right {
	transform: translate(-5px);
	background-color: var(--background-modifier-hover);
}

.screenplay-index-cards .drop-left {
	transform: translate(5px);
	background-color: var(--background-modifier-hover);
}

.screenplay-index-card .scene-heading {
	font-size: 14px;
	text-transform: uppercase;
	font-family:
		var(--screenplay-font), "Courier Final Draft", "Courier",
		var(--font-monospace);
	margin-top: 0;
	margin-left: 0;
	margin-right: 0;
	margin-bottom: 8px;
	/* padding: 8px; */
}

.screenplay-index-card .synopsis {
	font-size: 11px;
	/* padding: 8px; */
}

.screenplay-index-card textarea {
	font-size: 11px;
	flex: 1;
	resize: none;
}

.screenplay-index-card .edit-buttons {
	margin-top: 4px;
	margin-bottom: 0;
	justify-content: flex-end;
	display: flex;
	gap: 10px;
}

.screenplay-index-card .note-todo {
	font-size: 11px;
	margin: 5px;
	background-image: linear-gradient(
		transparent 70%,
		rgba(243, 245, 39, 0.4) 70%
	);
}

